--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@phosphor-icons/react": "^2.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "motion": "^12.23.26",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
