--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "shadcn": "^3.6.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
